--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ayush's Web Page</title>
 </head>
 <body>
-    
+    <h1>Welcome to Ayush's Webpage</h1>
 </body>
 </html>
