Created Table with Aligned Data

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,11 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ayush's Web Page</title>
+    <title>Ayush's Academic Qualification</title>
 </head>
 <body>
-    <h1>Welcome to Ayush's Webpage</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
+    <h1 align="center">Academic Qualifications</h1>
+    <table border="1" width="80%" align="center"
+        cellpadding="8" cellspacing="0" bgcolor="lightcyan">
+        <tr>
+            <th align="center">S.No</th>
+            <th align="center">Class</th>
+            <th align="center">Board</th>
+            <th align="center">Marks</th>
+            <th align="center">Division</th>
+        </tr>
+        <tr>
+            <td align="center">1.</td>
+            <td align="center">10th</td>
+            <td align="center">CBSE</td>
+            <td align="center">91%</td>
+            <td align="center">1st</td>
+        </tr>
+    </table>
 </body>
 </html>
