--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,15 +6,26 @@
     <title>Ayush's Academic Qualification</title>
 </head>
 <body>
-    <h1 align="center">Academic Qualifications</h1>
+    <h1 align="center"><b>Resume</b></h1>
+    <img src="https://www.shutterstock.com/image-vector/happy-dog-illustration-cool-print-600nw-2278572967.jpg" align="right" width="200"
+    height="200"> </img>
+    <h2><b>Personal Details</b></h2>
+    <h3>Name: Ayush Sinha</h3>
+    <h3>Father's Name: Manoj Kumar Sinha</h3>
+    <h3>Mother's Name: Vandana Sinha</h3>
+    <h3>DOB: 30/01/2004</h3>
+    <h3>Gmail ID: asinha30012004@gmail.com</h3>
+    <h3>GitHub ID: Ayushh-ops</h3> 
+    <h3>Mobile: 8319183454</h3>  
+    <h1 align="center"><u>Academic Qualifications</u></h1>
     <table border="1" width="80%" align="center"
         cellpadding="8" cellspacing="0" bgcolor="lightcyan">
         <tr>
-            <th align="center">S.No</th>
-            <th align="center">Class</th>
-            <th align="center">Board</th>
-            <th align="center">Marks</th>
-            <th align="center">Division</th>
+            <th align="center" bgcolor="yellow">S.No</th>
+            <th align="center" bgcolor="pink">Class</th>
+            <th align="center" bgcolor="pink">Board</th>
+            <th align="center" bgcolor="pink">Marks</th>
+            <th align="center" bgcolor="pink">Division</th>
         </tr>
         <tr>
             <td align="center">1.</td>
@@ -23,6 +34,25 @@
             <td align="center">91%</td>
             <td align="center">1st</td>
         </tr>
+        <tr>
+            <td align="center">2.</td>
+            <td align="center">12th</td>
+            <td align="center">MP BOARD</td>
+            <td align="center">82.5%</td>
+            <td align="center">1st</td>
+        </tr>
+        <tr>
+            <td align="center">3.</td>
+            <td align="center">BTECH</td>
+            <td align="center">AKTU</td>
+            <td align="center">75.70%</td>
+            <td align="center">1st</td>
+        </tr>
     </table>
+    <p>
+        Area of Interest:
+        <br>Hobby:
+        <br>Disclaimer:
+    </p>
 </body>
 </html>
