--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ayush's Academic Qualification</title>
+    <title>Ayush's Resume</title>
 </head>
 <body>
     <h1 align="center"><b>Resume</b></h1>
-    <img src="https://www.shutterstock.com/image-vector/happy-dog-illustration-cool-print-600nw-2278572967.jpg" align="right" width="200"
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRM0nI6o9l7fyionBcUIlUC15MjBMqIOIcmTQ&s" align="right" width="200"
     height="200"> </img>
     <h2><b>Personal Details</b></h2>
     <h3>Name: Ayush Sinha</h3>
     <h3>Father's Name: Manoj Kumar Sinha</h3>
     <h3>Mother's Name: Vandana Sinha</h3>
     <h3>DOB: 30/01/2004</h3>
-    <h3>Gmail ID: asinha30012004@gmail.com</h3>
-    <h3>GitHub ID: Ayushh-ops</h3> 
+    <h3>Gmail ID: <a href="https://mail.google.com/mail/u/0/#inbox">asinha30012004@gmail.com</a></h3> 
+    <h3>GitHub ID: <a href="https://github.com/Ayushh-ops">Ayushh-ops</a></h3> 
     <h3>Mobile: 8319183454</h3>  
     <h1 align="center"><u>Academic Qualifications</u></h1>
     <table border="1" width="80%" align="center"
@@ -49,10 +49,10 @@
             <td align="center">1st</td>
         </tr>
     </table>
-    <p>
-        Area of Interest:
-        <br>Hobby:
-        <br>Disclaimer:
-    </p>
+    <div style="color:rgb(255, 1, 217)">
+       <h3>Area of Interest: Technology</h3> 
+        <h3>Hobby:Sports,Gaming</h3>
+        <h3>Disclaimer:</h3>
+</div>
 </body>
 </html>
